--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -4,3 +4,10 @@
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 20px;
 }
+
+@media screen and (max-width: 500px) {
+  .card-grid {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 15px;
+  }
+}
