--- a/src/components/SingleCard/SingleCard.css
+++ b/src/components/SingleCard/SingleCard.css
@@ -32,3 +32,12 @@
   transform: rotateY(90deg);
   transition-delay: 0s;
 }
+
+@media screen and (max-width: 500px) {
+  .card img {
+    width: 100%;
+    display: block;
+    border: 2px solid #fff;
+    border-radius: 6px;
+  }
+}
